--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,3 +1,9 @@
+########################################################################
+##                                                                    ##
+##                       Yokoso watashino Hyprland                    ##
+##                           <made by TH-O-R>                         ##
+##                                                                    ##
+########################################################################
 monitor=eDP-1, 1920x1080@60, auto, 1.0
 
 #------------------------------------#
@@ -5,11 +11,15 @@ monitor=eDP-1, 1920x1080@60, auto, 1.0
 $mainMod = SUPER
 $localBin = $HOME/.local/bin
 $hyprDir = $HOME/.config/hypr
-$scriptsDir = $HOME/.config/hypr/scripts
+$scriptsDir = $hyprDir/scripts
 $term = kitty
+$altTerm = alacritty
 $files = thunar
 $browser = firefox
 $altBrowser = chromium
+$notes = logseq
+$altNotes = obsidian
+$logout = wlogout
 #------------------------------------#
 
 #------------------------------------#
@@ -118,3 +128,81 @@ gestures {
 
 #------------------------------------#
 # binds #
+# - General
+bind = $mainMod SHIFT,  R,      exec, hyprctl reload
+bind = $mainMod,        Q,      exec, killactive
+bind = $mainMod SHIFT,  Return, exec, $files
+bind = $mainMod SHIFT,  Space,  exec, togglefloating
+bind = $mainMod,        F,      exec, fullscreen
+bind = $mainMod,        Return, exec, $term
+bind = $mainMod,        T,      exec, $altTerm
+bind = $mainMod,        N,      exec, $notes
+bind = $mainMod SHIFT,  N,      exec, $altNotes
+bind = $mainMod,        X,      exec, $logout
+bind = $mainMod,        Escape, exec, hyprctl kill
+
+# - Resize
+bind = $mainMod SHIFT, L,  resizeactive, 50  0
+bind = $mainMod SHIFT, K,  resizeactive, 0   -50
+bind = $mainMod SHIFT, J,  resizeactive, 0   50
+bind = $mainMod SHIFT, H,  resizeactive, -50 0
+
+bindm = $mainMod, mouse:273, resizewindow
+
+# - Move
+bind = $mainMod CTRL, L,   movewindow, r
+bind = $mainMod CTRL, K,   movewindow, u
+bind = $mainMod CTRL, J,   movewindow, d
+bind = $mainMod CTRL, H,   movewindow, l
+
+bindm = $mainMod, mouse:272, movewindow
+
+# - Focus
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, left,  movefocus, l
+bind = $mainMod, up,    movefocus, u
+bind = $mainMod, down,  movefocus, d
+
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
+
+# - workspaces
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 0
+
+# - Special workspace
+bind = $mainMod SHIFT, U, movetoworkspace, special
+bind = $mainMod,       U, movetoworkspace
+
+# - Move active window to workspace
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 0
+
+# - Scroll through existing workspaces
+bind = $mainMod,       mouse_dowm,    workspace, e+1
+bind = $mainMod,       mouse_up,      workspace, e-1
+bind = $mainMod,       period,        workspace, e+1
+bind = $mainMod,       comma,         workspace, e-1
+bind = $mainMod,       tab,           workspace, m+1
+bind = $mainMod SHIFT, tab,           workspace, m-1
+bind = ALT,            tab,           workspace, m+1
+bind = ALT SHIFT,      tab,           workspace, m-1
+#------------------------------------#
