Completed all binding for the new scripts + menus

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -12,6 +12,13 @@ $mainMod = SUPER
 $localBin = $HOME/.local/bin
 $hyprDir = $HOME/.config/hypr
 $scriptsDir = $hyprDir/scripts
+$menu = $scriptsDir/menu
+$fullmenu = $scriptsDir/fullmenu
+$volume = $scriptsDir/volume
+$backlight = $scriptsDir/brightness
+$screenshot = $scriptsDir/screenshot
+$wallpaper = $scriptsDir/changeWall
+$layout = $scriptsDir/changeLayout
 $term = kitty
 $altTerm = alacritty
 $files = thunar
@@ -140,6 +147,10 @@ bind = $mainMod,        N,      exec, $notes
 bind = $mainMod SHIFT,  N,      exec, $altNotes
 bind = $mainMod,        X,      exec, $logout
 bind = $mainMod,        Escape, exec, hyprctl kill
+bind = $mainMod,        D,      exec, $menu
+bind = $mainMod SHIFT,  D,      exec, $fullmenu
+bind = $mainMod,        Space   exec, $layout
+bind = ALT,             n,      exec, $wallpaper
 
 # - Resize
 bind = $mainMod SHIFT, L,  resizeactive, 50  0
@@ -205,4 +216,16 @@ bind = $mainMod,       tab,           workspace, m+1
 bind = $mainMod SHIFT, tab,           workspace, m-1
 bind = ALT,            tab,           workspace, m+1
 bind = ALT SHIFT,      tab,           workspace, m-1
+
+# - Special Keys
+bind = ,                xf86audioraisevolume,   exec,   $volume --inc  
+bind = ,                xf86audiolowervolume,   exec,   $volume --dec
+bind = ,                xf86audiomute,          exec,   $volume --toggle
+bind = ,                xf86monbrightnessup,    exec,   $backlight --inc
+bind = ,                xf86monbrightnessdown,  exec,   $backlight --dec
+bind = ,                Print,                  exec,   $screenshot --now
+bind = $mainMod,        Print,                  exec,   $screenshot --in5
+bind = SHIFT,           Print,                  exec,   $screenshot --in10
+bind = CTRL,            Print,                  exec,   $screenshot --win
+bind = $mainMod SHIFT,  Print,                  exec,   $screenshot --area
 #------------------------------------#
