added a custom launcher to waybar modules + ScreenShots of the setup

--- a/waybar/config.ini
+++ b/waybar/config.ini
@@ -5,7 +5,7 @@
     "height": 39,
     "spacing": 4,
 
-    "modules-left": ["hyprland/window"],
+    "modules-left": ["custom/launcher", "hyprland/window"],
     "modules-center": ["hyprland/workspaces"],
     "modules-right": ["pulseaudio", "cpu", "memory", "temperature", "clock", "backlight", "network", "tray", "battery"],
 }
