fixed some keybindings not working and other stuff

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -13,7 +13,7 @@ $localBin = $HOME/.local/bin
 $hyprDir = $HOME/.config/hypr
 $scriptsDir = $hyprDir/scripts
 $menu = $scriptsDir/menu
-$fullmenu = $scriptsDir/fullmenu
+$fullmenu = $scriptsDir/menuFull
 $volume = $scriptsDir/volume
 $backlight = $scriptsDir/brightness
 $screenshot = $scriptsDir/screenshot
@@ -31,8 +31,9 @@ $logout = wlogout
 
 #------------------------------------#
 # Some default env vars #
-env = XCURSOR_SIZE,24
-env = XDG_CURRENT_DESKTOP,Hyprland
+env = XCURSOR_THEME, Bibata-Modern-Classic
+env = XCURSOR_SIZE, 24
+env = XDG_CURRENT_DESKTOP, Hyprland
 env = HYPRCURSOR_THEME
 #------------------------------------#
 
@@ -114,7 +115,7 @@ animations {
     animation = windowsMove, 1, 3,  myBezier, popin
     animation = border,      1, 5,  default
     animation = fade,        1, 5,  default
-    animation = workspace,   1, 7,  myBezier, slidefade
+    animation = workspaces,   1, 7,  myBezier, slidefade
 }
 
 dwindle {
@@ -137,10 +138,10 @@ gestures {
 # binds #
 # - General
 bind = $mainMod SHIFT,  R,      exec, hyprctl reload
-bind = $mainMod,        Q,      exec, killactive
+bind = $mainMod,        Q,            killactive
 bind = $mainMod SHIFT,  Return, exec, $files
-bind = $mainMod SHIFT,  Space,  exec, togglefloating
-bind = $mainMod,        F,      exec, fullscreen
+bind = $mainMod SHIFT,  Space,        togglefloating
+bind = $mainMod,        F,            fullscreen
 bind = $mainMod,        Return, exec, $term
 bind = $mainMod,        T,      exec, $altTerm
 bind = $mainMod,        N,      exec, $notes
@@ -149,7 +150,7 @@ bind = $mainMod,        X,      exec, $logout
 bind = $mainMod,        Escape, exec, hyprctl kill
 bind = $mainMod,        D,      exec, $menu
 bind = $mainMod SHIFT,  D,      exec, $fullmenu
-bind = $mainMod,        Space   exec, $layout
+bind = $mainMod,        Space,  exec, $layout
 bind = ALT,             n,      exec, $wallpaper
 
 # - Resize
@@ -221,6 +222,7 @@ bind = ALT SHIFT,      tab,           workspace, m-1
 bind = ,                xf86audioraisevolume,   exec,   $volume --inc  
 bind = ,                xf86audiolowervolume,   exec,   $volume --dec
 bind = ,                xf86audiomute,          exec,   $volume --toggle
+bind = ,                xf86audiomutemic,       exec,   $volume --toggle-mic
 bind = ,                xf86monbrightnessup,    exec,   $backlight --inc
 bind = ,                xf86monbrightnessdown,  exec,   $backlight --dec
 bind = ,                Print,                  exec,   $screenshot --now
