fixed small typo and some minimal changes

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -222,7 +222,7 @@ bind = ALT SHIFT,      tab,           workspace, m-1
 bind = ,                xf86audioraisevolume,   exec,   $volume --inc  
 bind = ,                xf86audiolowervolume,   exec,   $volume --dec
 bind = ,                xf86audiomute,          exec,   $volume --toggle
-bind = ,                xf86audiomutemic,       exec,   $volume --toggle-mic
+bind = ,                xf86audiomicmute,       exec,   $volume --toggle-mic
 bind = ,                xf86monbrightnessup,    exec,   $backlight --inc
 bind = ,                xf86monbrightnessdown,  exec,   $backlight --dec
 bind = ,                Print,                  exec,   $screenshot --now
