--- a/hyprland.conf
+++ b/hyprland.conf
@@ -39,6 +39,7 @@ env = HYPRCURSOR_THEME
 
 #------------------------------------#
 # Startup #
+exec-once = $scriptsDir/startup
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
