Can't exit special workspace fixed

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -195,7 +195,7 @@ bind = $mainMod, 0, workspace, 0
 
 # - Special workspace
 bind = $mainMod SHIFT, U, movetoworkspace, special
-bind = $mainMod,       U, movetoworkspace
+bind = $mainMod,       U, togglespecialworkspace,
 
 # - Move active window to workspace
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
