󱠇breaking change: Now using dynamic broder colors

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -43,6 +43,9 @@ exec-once = $scriptsDir/startup
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+# Get the generated color scheme from pywal
+source = ~/.cache/wal/colors-hyprland.conf
 #------------------------------------#
 
 #------------------------------------#
@@ -75,8 +78,13 @@ general {
     gaps_out = 14
     border_size = 3
 
-    col.active_border = rgba(9f9f9fff) rgba(929292ff) 90deg
-    col.inactive_border = rgba(000000ff)
+    # Use this for basic color borders
+    #col.active_border = rgba(9f9f9fff) rgba(929292ff) 90deg
+    #col.inactive_border = rgba(000000ff)
+    
+    # Use this for Awesome border colors 
+    col.active_border = $color6 $color3 40deg
+    col.inactive_border = $color0
 
     layout = dwindle
     #layout = master
