modified three files that were buggy

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -112,7 +112,7 @@ decoration {
     }
 }
 
-blurls = waybar
+#blurls = waybar
 
 animations {
     enabled = true
@@ -153,6 +153,8 @@ bind = $mainMod SHIFT,  Space,        togglefloating
 bind = $mainMod,        F,            fullscreen
 bind = $mainMod,        Return, exec, $term
 bind = $mainMod,        T,      exec, $altTerm
+bind = $mainMod,        W,      exec, $browser
+bind = $mainMod SHIFT,  W,      exec, $altBrowser
 bind = $mainMod,        N,      exec, $notes
 bind = $mainMod SHIFT,  N,      exec, $altNotes
 bind = $mainMod,        X,      exec, $logout
