Major bug fixes

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -17,7 +17,6 @@ $fullmenu = $scriptsDir/menuFull
 $volume = $scriptsDir/volume
 $backlight = $scriptsDir/brightness
 $screenshot = $scriptsDir/screenshot
-$wallpaper = $scriptsDir/changeWall
 $layout = $scriptsDir/changeLayout
 $term = kitty
 $altTerm = alacritty
@@ -162,7 +161,7 @@ bind = $mainMod,        Escape, exec, hyprctl kill
 bind = $mainMod,        D,      exec, $menu
 bind = $mainMod SHIFT,  D,      exec, $fullmenu
 bind = $mainMod,        Space,  exec, $layout
-bind = ALT,             n,      exec, $wallpaper
+bind = ALT,             n,      exec, $scriptsDir/changeWall
 
 # - Resize
 bind = $mainMod SHIFT, L,  resizeactive, 50  0
@@ -230,15 +229,15 @@ bind = ALT,            tab,           workspace, m+1
 bind = ALT SHIFT,      tab,           workspace, m-1
 
 # - Special Keys
-bind = ,                xf86audioraisevolume,   exec,   $volume --inc  
-bind = ,                xf86audiolowervolume,   exec,   $volume --dec
-bind = ,                xf86audiomute,          exec,   $volume --toggle
-bind = ,                xf86audiomicmute,       exec,   $volume --toggle-mic
-bind = ,                xf86monbrightnessup,    exec,   $backlight --inc
-bind = ,                xf86monbrightnessdown,  exec,   $backlight --dec
-bind = ,                Print,                  exec,   $screenshot --now
-bind = $mainMod,        Print,                  exec,   $screenshot --in5
-bind = SHIFT,           Print,                  exec,   $screenshot --in10
-bind = CTRL,            Print,                  exec,   $screenshot --win
-bind = $mainMod SHIFT,  Print,                  exec,   $screenshot --area
+binde = ,                xf86audioraisevolume,   exec,   $volume --inc  
+binde = ,                xf86audiolowervolume,   exec,   $volume --dec
+bind  = ,                xf86audiomute,          exec,   $volume --toggle
+bind  = ,                xf86audiomicmute,       exec,   $volume --toggle-mic
+bind  = ,                xf86monbrightnessup,    exec,   $backlight --inc
+bind  = ,                xf86monbrightnessdown,  exec,   $backlight --dec
+bind  = ,                Print,                  exec,   $screenshot --now
+bind  = $mainMod,        Print,                  exec,   $screenshot --in5
+bind  = SHIFT,           Print,                  exec,   $screenshot --in10
+bind  = CTRL,            Print,                  exec,   $screenshot --win
+bind  = $mainMod SHIFT,  Print,                  exec,   $screenshot --area
 #------------------------------------#
